--- a/SyndicatedLoansUI/src/main/resources/templates/fragments/header.html
+++ b/SyndicatedLoansUI/src/main/resources/templates/fragments/header.html
@@ -16,35 +16,41 @@
 
 <div class="container">
     <div th:fragment="header">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/loans}">SydicatedLoans List</a></li>
-                        <li><a href="#" th:href="@{/loan/new}">Syndicate New Loan</a></li>
-                        <li><a href="#" th:href="@{/participant/first}">First Participant</a></li>
-                        <li><a href="#" th:href="@{/participant/second}">Second Participant</a></li>
-                        <li><a href="#" th:href="@{/participant/third}">Third Participant</a></li>
-                        <li><a href="#" th:href="@{/participant/fourth}">Fourth Participant</a></li>
+                        <li><a href="#" th:href="@{/regulator}">REGULATOR VIEW</a></li>
+                        <li><a href="#" th:href="@{/loan/new}">AGENTBANK VIEW</a></li>
+                        <li><a href="#" th:href="@{/participant/first}">FIRST PARTICIPANT VIEW</a></li>
+                        <li><a href="#" th:href="@{/participant/second}">SECOND PARTICIPANT VIEW</a></li>
+                        <li><a href="#" th:href="@{/loans}">BORROWER VIEW</a></li>
+                       
                     </ul>
 
                 </div>
             </div>
         </nav>
 
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Syndicated Loans</h2>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/blokchain.jpg" width="700"
-                     th:src="@{/images/blokchain.jpg}"/>
+       <div class="jumbotron jumbotron-billboard">
+  <div class="img"></div>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <h1>Syndicated Deals</h1>
+                <p>
+                    COMMERCIAL BANK
+                </p>
+                <!-- <a href="#" class="btn btn-success btn-lg">Sign Up</a> -->
             </div>
         </div>
     </div>
 </div>
+    </div>
+</div>
+<style>
+
+</style>
 </body>
 </html>
