--- a/SyndicatedLoansUI/src/main/resources/templates/loans.html
+++ b/SyndicatedLoansUI/src/main/resources/templates/loans.html
@@ -11,7 +11,7 @@
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
     <div th:if="${not #lists.isEmpty(loans)}">
         <h2>Syndicated Loans List</h2>
-        <table class="table table-striped">
+        <table class="table table-bordered">
             <tr>
                 <th>Id</th>
                 <th>Property Id</th>
@@ -26,7 +26,7 @@
                 <td th:text="${loan.landId}">description</td>
                 <td th:text="${loan.permitId}">number</td>
                 <td><a th:href="${ '/loan/' + loan.id}">View</a></td>
-                <td><a th:href="${'/loan/edit/' + loan.id}">Edit</a></td>
+                <td><a th:href="${'/loan/edit/' + loan.id}">Settle</a></td>
             </tr>
         </table>
 
